Commit arquivos portfolio

--- a/Meu-portfolio.html
+++ b/Meu-portfolio.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./meu-portfolio.css">
   <title>Portifólio | Carlos Artur</title>
-  <link rel="icon" type="image/x-icon" href="./favicon-32x32.png">
+  <link rel="icon" type="image/x-icon" href="imgs/favicon-32x32.png">
 
 </head>
 
@@ -75,26 +75,26 @@
       <div>
         <div class="containerBasicoHabilidade">
           <div class="habilidadeHTML">
-            <img src="./htmlIcon.png" alt="ícone HTML" id="iconeHTML">
+            <img src="imgs/htmlIcon.png" alt="ícone HTML" id="iconeHTML">
           </div>
 
           <div class="habilidadeCSS">
-            <img src="./css.png" alt="ícone CSS" id="iconeCSS">
+            <img src="imgs/css.png" alt="ícone CSS" id="iconeCSS">
           </div>
 
           <div class="habilidadeJS">
-            <img src="./js.png" alt="ícone JS" id="iconeJS">
+            <img src="imgs/js.png" alt="ícone JS" id="iconeJS">
           </div>
         </div>
 
         <div class="containerGITHabilidade">
 
           <div class="habilidadeGIT">
-            <img src="./git.png" alt="ícone GIT" id="iconeGit">
+            <img src="imgs/git.png" alt="ícone GIT" id="iconeGit">
           </div>
 
           <div class="habilidadeGITHUB">
-            <img src="./github.png" alt="ícone Github" id="iconeGitHub">
+            <img src="imgs/github.png" alt="ícone Github" id="iconeGitHub">
           </div>
         </div>
 
@@ -141,19 +141,19 @@
 
         <div class="projetoCalculadoraIMCDIV">
           <a href="https://github.com/cartur-bs/calculadoraIMC" target="_blank">
-            <img src="./projetoIMC.png" class="projetoCalculadoraIMC" alt="página de calculo de IMC">
+            <img src="imgs/projetoIMC.png" class="projetoCalculadoraIMC" alt="página de calculo de IMC">
           </a>
         </div>
 
         <div class="projetoCadastroBasicoDIV">
           <a href="https://github.com/cartur-bs/cadastroBasico" target="_blank">
-            <img src="./projetoCadastroBasico.png" class="projetoCadastroBasico" alt="página de cadastro">
+            <img src="imgs/projetoCadastroBasico.png" class="projetoCadastroBasico" alt="página de cadastro">
           </a>
         </div>
 
         <div class="projetoRatingProjectDIV">
           <a href="https://github.com/cartur-bs/ratingProject" target="_blank">
-            <img src="./projetoRatingProject.png" class="projetoRatingProject" alt="página de avaliação">
+            <img src="imgs/projetoRatingProject.png" class="projetoRatingProject" alt="página de avaliação">
           </a>
         </div>
 
@@ -162,13 +162,13 @@
       <div class="linha2Projetos">
         <div class="projetoHomePageDIV">
           <a href="https://github.com/cartur-bs/homePage" target="_blank">
-            <img src="./projetoHomePage.png" class="projetoHomePage" alt="Home page de notícias">
+            <img src="imgs/projetoHomePage.png" class="projetoHomePage" alt="Home page de notícias">
           </a>
         </div>
 
         <div class="projetoEcommerceDIV">
           <a href="https://github.com/cartur-bs/ecommerce" target="_blank">
-            <img src="./projetoEcommerce.png" class="projetoEcommerce" alt="">
+            <img src="imgs/projetoEcommerce.png" class="projetoEcommerce" alt="">
           </a>
         </div>
 
