--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
   <script src="./meu-portfolio.js" defer></script>
 
   <header>
-    <div class="ptIngDiv">
-      <input type="checkbox" id="inputMudaIdioma">
-    </div>
-
     <div class="sessoes">
       <a href="#pagInicio">Início</a>
       <a href="#sobreMim">Sobre mim</a>
@@ -30,17 +26,16 @@
   <main>
     <div class="pagInicio" id="pagInicio">
       <div class="textoInicio">
-        <h3 class="apresentacao">Olá, eu sou <span class="span">Hello, I am</span></h3>
-        <h1 class="apresentacao">Carlos Artur. <span class="span">Carlos Artur.</span></h1>
-        <h3 class="apresentacao">Desenvolvedor Front-end <span class="span">Front-end developer</span></h3>
-        <button type="button" href="linkedin" class="linkedinBotao">Linkedin</button>
+        <h3 class="apresentacao">Olá, eu sou</h3>
+        <h1 class="apresentacao">Carlos Artur.</h1>
+        <h3 class="apresentacao">Desenvolvedor Front-end</h3>
+        <a href="https://www.linkedin.com/in/carturthedeveloper001/" target="_blank"><button type="button"
+            class="linkedinBotao"> Linkedin</button></a>
       </div>
 
       <div class="avatarInicio">
         <img src="" alt="" class="avatarImagem">
       </div>
-
-
     </div>
 
     <div class="sobreMim" id="sobreMim">
@@ -58,14 +53,6 @@
           Possuo conhecimento sólido de tecnologias como HTML, CSS, JavaScript e
           básicos de ReactJS e Bootstrap.
 
-          <span class="span">Who am I?</span>
-          <span class="span">My name is Carlos Artur and I am a technology lover who always longs
-            for knowledge and has seen on software development a way to follow this track
-            of endless learning. Yet with no effective experience on the market as a front-end
-            developer, but with enough skills to collaborate with a company in this role. <br><br>
-            I have solid knowledge in technologies such as HTML, CSS JavaScript and basic
-            on ReactJS and Bootstrap.
-          </span>
         </p>
       </div>
     </div>
@@ -102,32 +89,26 @@
 
 
       <div class="habilidadeTXT">
-        <h1 id="h1Habilidade">Habilidades <span class="span">Habilities</span></h1>
-        <p id="pHabilidade">/Vamos conhecer melhor minhas habilidades? Passe o mouse pelos ícones./
-          <span class="span">/Let's learn a bit about my skills? Pass the cursor over the icons./</span>
-        </p>
+        <h1 id="h1Habilidade">Habilidades</h1>
+        <p id="pHabilidade">/Vamos conhecer melhor minhas habilidades? Passe o mouse pelos ícones./ </p>
 
         <div>
           <p class="pHTML" id="pHTML">HTML é uma linguagem de marcação de hipertexto utilizada
             na construção de páginas web.
-            <span class="span">HTML is the standard markup language for Web pages </span>
           </p>
-          <p class="pCSS" id="pCSS">CSS permite a implementação de estilos diversos à página web.
-            <span class="span">CSS allows the implementation of a variety of styles to the web page.</span>
-          </p>
+
+          <p class="pCSS" id="pCSS">CSS permite a implementação de estilos diversos à página web. </p>
+
           <p class="pJS" id="pJS">JavaScript é uma linguagem de programação de auto-nível que permite
             a adição da funcionalidade aos elementos da página web.
-            <span class="span">JavaScript is a high-level programming language that allows the functionality
-              implementation to the web page elements.
-            </span>
           </p>
+
           <p class="pGit" id="pGit">GIT é um sistema de controle de versões distribuído usado no
             desenvolvimento de software.
-            <span class="span">Git is a distributed version control system used on software development.</span>
           </p>
+
           <p class="pGitHub" id="pGitHub">Github é uma plataforma que permite o armazenamento em nuvem
             dos códigos fonte de uma aplicação.
-            <span class="span">Github is a plataform that allows the application code's cloud storage</span>
           </p>
         </div>
       </div>
@@ -135,7 +116,7 @@
     </div>
 
     <div class="projetos" id="projetos">
-      <h1 class="projetosNome">Projetos <span class="span">Projects</span></h1>
+      <h1 class="projetosNome">Projetos</h1>
       <div class="linha1Projetos">
 
 
@@ -176,7 +157,7 @@
     </div>
 
     <div class="informacoes">
-      <h3 class="h3Informacoes">Me encontre em: <span class="span">How to reach me:</span></h3>
+      <h3 class="h3Informacoes">Me encontre em:</h3>
       <a class="contatoEmail" href="mailto:cartur758@gmail.com" target="_blank">cartur758@gmail.com</a>
       <a class="contatoInstagram" href="https://www.instagram.com/arturr.bs/" target="_blank">@arturr.bs</a>
     </div>
