--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="avatarInicio">
-        <img src="" alt="" class="avatarImagem">
+        <img src="./sketch1682096836028.png" alt="" class="avatarImagem">
       </div>
     </div>
 
