--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="sobreMim" id="sobreMim">
       <div class="imgSobreMim">
-        <img src="" alt="" class="imgSobreMim">
+        <img src="./design1.png" alt="" class="imgSobreMim">
       </div>
 
       <div class="txtSobreMim">
