atualizacoes do portfolio

--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
 
 
         <div class="projetoCalculadoraIMCDIV">
-          <a href="https://github.com/cartur-bs/calculadoraIMC" target="_blank">
+          <a href="https://cartur-bs.github.io/calculadoraIMC/" target="_blank">
             <img src="./projetoIMC.png" class="projetoCalculadoraIMC" alt="página de calculo de IMC">
           </a>
         </div>
 
         <div class="projetoCadastroBasicoDIV">
-          <a href="https://github.com/cartur-bs/cadastroBasico" target="_blank">
+          <a href="https://cartur-bs.github.io/cadastroBasico/" target="_blank">
             <img src="./projetoCadastroBasico.png" class="projetoCadastroBasico" alt="página de cadastro">
           </a>
         </div>
 
         <div class="projetoRatingProjectDIV">
-          <a href="https://github.com/cartur-bs/ratingProject" target="_blank">
+          <a href="https://cartur-bs.github.io/ratingProject/" target="_blank">
             <img src="./projetoRatingProject.png" class="projetoRatingProject" alt="página de avaliação">
           </a>
         </div>
@@ -142,14 +142,19 @@
 
       <div class="linha2Projetos">
         <div class="projetoHomePageDIV">
-          <a href="https://github.com/cartur-bs/homePage" target="_blank">
+          <a href="https://cartur-bs.github.io/homePage/" target="_blank">
             <img src="./projetoHomePage.png" class="projetoHomePage" alt="Home page de notícias">
           </a>
         </div>
 
         <div class="projetoEcommerceDIV">
-          <a href="https://github.com/cartur-bs/ecommerce" target="_blank">
+          <a href="https://cartur-bs.github.io/ecommerce/" target="_blank">
             <img src="./projetoEcommerce.png" class="projetoEcommerce" alt="">
+          </a>
+        </div>
+        <div class="projetoLandingPage">
+          <a href="https://github.com/cartur-bs/landingPage" target="_blank">
+            <img src="Captura de Tela (7).png" class="projetoEcommerce">
           </a>
         </div>
 
