deploy-github-finder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="./meu-portfolio.js" defer></script>
 
   <header>
- 
+
     <div class="sessoes">
       <a href="#pagInicio">Início</a>
       <a href="#sobreMim">Sobre mim</a>
@@ -139,8 +139,8 @@
 
     <div class="projetos" id="projetos">
       <h1 class="projetosNome">Projetos</h1>
+      <span>/Clique para acessar/</span>
       <div class="linha1Projetos">
-
 
         <div class="projetoCalculadoraIMCDIV">
           <a href="https://cartur-bs.github.io/calculadoraIMC/" target="_blank">
@@ -174,9 +174,9 @@
             <img src="./projetoEcommerce.png" class="projetoEcommerce" alt="">
           </a>
         </div>
-        <div class="projetoLandingPage">
-          <a href="https://github.com/cartur-bs/landingPage" target="_blank">
-            <img src="Captura de Tela (7).png" class="projetoEcommerce">
+        <div class="projetoGithubFinder">
+          <a href="https://cartur-bs.github.io/gitHubFinder/" target="_blank">
+            <img src="Captura de Tela (9).png" class="projetoEcommerce">
           </a>
         </div>
 
