adicao-sessao-react

--- a/index.html
+++ b/index.html
@@ -138,60 +138,70 @@
     </div>
 
     <div class="projetos" id="projetos">
-      <h1 class="projetosNome">Projetos</h1>
-      <span>/Clique para acessar/</span>
-      <div class="linha1Projetos">
+      <h1 class="projetosNome">Projetos</h1> <span>/Clique para acessar/</span><br>
+      <h3 id="jsSessao">Javascript</h3>
+      <h3 id="reactjsSessao" class="sessaoFechada">ReactJS</h3>
 
-        <div class="projetoCalculadoraIMCDIV">
-          <a href="https://cartur-bs.github.io/calculadoraIMC/" target="_blank">
-            <img src="./projetoIMC.png" class="projetoCalculadoraIMC" alt="página de calculo de IMC">
-          </a>
+      <div id="jsSessaoDiv">
+        <div class="linha1Projetos">
+
+          <div class="projetoCalculadoraIMCDIV">
+            <a href="https://cartur-bs.github.io/calculadoraIMC/" target="_blank">
+              <img src="./projetoIMC.png" class="projeto CalculadoraIMC" alt="página de calculo de IMC">
+            </a>
+          </div>
+
+          <div class="projetoCadastroBasicoDIV">
+            <a href="https://cartur-bs.github.io/cadastroBasico/" target="_blank">
+              <img src="./projetoCadastroBasico.png" class="projeto CadastroBasico" alt="página de cadastro">
+            </a>
+          </div>
+
+          <div class="projetoRatingProjectDIV">
+            <a href="https://cartur-bs.github.io/ratingProject/" target="_blank">
+              <img src="./projetoRatingProject.png" class="projeto RatingProject" alt="página de avaliação">
+            </a>
+          </div>
         </div>
+        
+        <div class="linha2Projetos">
+          <div class="projetoHomePageDIV">
+            <a href="https://cartur-bs.github.io/homePage/" target="_blank">
+              <img src="./projetoHomePage.png" class="projeto HomePage" alt="Home page de notícias">
+            </a>
+          </div>
 
-        <div class="projetoCadastroBasicoDIV">
-          <a href="https://cartur-bs.github.io/cadastroBasico/" target="_blank">
-            <img src="./projetoCadastroBasico.png" class="projetoCadastroBasico" alt="página de cadastro">
-          </a>
+          <div class="projetoEcommerceDIV">
+            <a href="https://cartur-bs.github.io/ecommerce/" target="_blank">
+              <img src="./projetoEcommerce.png" class="projeto Ecommerce" alt="">
+            </a>
+          </div>
         </div>
-
-        <div class="projetoRatingProjectDIV">
-          <a href="https://cartur-bs.github.io/ratingProject/" target="_blank">
-            <img src="./projetoRatingProject.png" class="projetoRatingProject" alt="página de avaliação">
-          </a>
-        </div>
-
       </div>
 
-      <div class="linha2Projetos">
-        <div class="projetoHomePageDIV">
-          <a href="https://cartur-bs.github.io/homePage/" target="_blank">
-            <img src="./projetoHomePage.png" class="projetoHomePage" alt="Home page de notícias">
-          </a>
-        </div>
-
-        <div class="projetoEcommerceDIV">
-          <a href="https://cartur-bs.github.io/ecommerce/" target="_blank">
-            <img src="./projetoEcommerce.png" class="projetoEcommerce" alt="">
-          </a>
-        </div>
-        <div class="projetoGithubFinder">
+      <div id="reactSessaoDiv" class="sessaoNone">
+ 
+        <div>
           <a href="https://cartur-bs.github.io/gitHubFinder/" target="_blank">
-            <img src="Captura de Tela (9).png" class="projetoEcommerce">
+            <img src="Captura de Tela (9).png" alt="projeto Github finder" class="projeto GithubFinder">
           </a>
         </div>
 
+        <div>
+          <a href="https://github.com/cartur-bs/turismoEspacial" target="_blank">
+            <img src="Captura de Tela (11).png" alt="projeto turismo espacial" class="projeto turismoEspacial">
+          </a>
+        </div>
       </div>
-    </div>
 
-    <div class="informacoes">
-      <h3 class="h3Informacoes">Me encontre em:</h3>
-      <a class="contatoEmail" href="mailto:cartur758@gmail.com" target="_blank">cartur758@gmail.com</a>
-      <a class="contatoInstagram" href="https://www.instagram.com/arturr.bs/" target="_blank">@arturr.bs</a>
-      <a class="contatoInstagram" href="https://github.com/cartur-bs" target="_blank">
-        <img src="./github.png" alt="icone github" class="githubFooter"></a>
-    </div>
+      <div class="informacoes">
+        <h3 class="h3Informacoes">Me encontre em:</h3>
+        <a class="contatoEmail" href="mailto:cartur758@gmail.com" target="_blank">cartur758@gmail.com</a>
+        <a class="contatoInstagram" href="https://www.instagram.com/arturr.bs/" target="_blank">@arturr.bs</a>
+        <a class="contatoInstagram" href="https://github.com/cartur-bs" target="_blank">
+          <img src="./github.png" alt="icone github" class="githubFooter"></a>
+      </div>
 
   </main>
 </body>
-
 </html>
