--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
 
       <div class="txtSobreMim">
         <h1>Quem sou eu?</h1>
-        <p>Você procura um desenvolvedor junior com sede de conhecimento e
-          potencial para crescer no mercado? Meu nome é Carlos Artur e sou um apaixonado
-          por tecnologia que viu na programação uma maneira de seguir esse
-          caminho de aprendizagem constante. <br> <br>
-          Possuo conhecimento sólido de tecnologias como HTML, CSS, JavaScript e
-          crescentes de ReactJS, Bootstrap.Veja mais e entenda como posso ser o integrante
-          ideal para compor seu time.
-
+        <p>Você procura um estagiário com sede de conhecimento, rápida aprendizagem e
+          sem medo de desbravar novas tecnologias? Sou Artur, estudante de engenharia de software
+          apaixonado por tecnologia e possuo experiências que permitem confirmar que possuo as
+          habilidades descritas acima. <br><br>
+          Possuo conhecimento sólido em tecnologias de front end, como HTML5, CSS3, JavaScript
+          e crescentes em ReactJS, assim como integração do front end com o banco de dados, área na qual
+          vejo potencial de desenvolvimento no ambiente de trabalho. 
+          Veja mais e entenda como posso ser o integrante ideal para compor seu time.
         </p>
+
       </div>
     </div>
 
@@ -163,7 +164,7 @@
             </a>
           </div>
         </div>
-        
+
         <div class="linha2Projetos">
           <div class="projetoHomePageDIV">
             <a href="https://cartur-bs.github.io/homePage/" target="_blank">
@@ -180,7 +181,7 @@
       </div>
 
       <div id="reactSessaoDiv" class="sessaoNone">
- 
+
         <div>
           <a href="https://cartur-bs.github.io/gitHubFinder/" target="_blank">
             <img src="Captura de Tela (9).png" alt="projeto Github finder" class="projeto GithubFinder">
@@ -204,4 +205,5 @@
 
   </main>
 </body>
+
 </html>
