manutencao-media-query

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           habilidades descritas acima. <br><br>
           Possuo conhecimento sólido em tecnologias de front end, como HTML5, CSS3, JavaScript
           e crescentes em ReactJS, assim como integração do front end com o banco de dados, área na qual
-          vejo potencial de desenvolvimento no ambiente de trabalho. 
+          vejo potencial de desenvolvimento no ambiente de trabalho.
           Veja mais e entenda como posso ser o integrante ideal para compor seu time.
         </p>
 
@@ -195,15 +195,16 @@
         </div>
       </div>
 
-      <div class="informacoes">
-        <h3 class="h3Informacoes">Me encontre em:</h3>
-        <a class="contatoEmail" href="mailto:cartur758@gmail.com" target="_blank">cartur758@gmail.com</a>
-        <a class="contatoInstagram" href="https://www.instagram.com/arturr.bs/" target="_blank">@arturr.bs</a>
-        <a class="contatoInstagram" href="https://github.com/cartur-bs" target="_blank">
-          <img src="./github.png" alt="icone github" class="githubFooter"></a>
-      </div>
+
 
   </main>
+  <footer class="informacoes">
+    <h3 class="h3Informacoes">Me encontre em:</h3>
+    <a class="contatoEmail" href="mailto:cartur758@gmail.com" target="_blank">cartur758@gmail.com</a>
+    <a class="contatoInstagram" href="https://www.instagram.com/arturr.bs/" target="_blank">@arturr.bs</a>
+    <a class="contatoInstagram" href="https://github.com/cartur-bs" target="_blank">
+      <img src="./github.png" alt="icone github" class="githubFooter"></a>
+  </footer>
 </body>
 
 </html>
