adição projeto sign in

--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@
             <img src="Captura de Tela (11).png" alt="projeto turismo espacial" class="projeto turismoEspacial">
           </a>
         </div>
+        
+        <div class="projetoSignInFormDIV">
+          <a href="https://cartur-bs.github.io/sign_in_page/" target="_blank">
+            <img src="./projeto-sign-in.png" class="projeto SignIn" alt="">
+          </a>
+        </div>
       </div>
 
 
